# fice-sc-bot

./: .dockerignore  .env.dist  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
bot/: commands.py  main.py  settings.py
bot/_types/: __init__.py  album.py  message_types.py  status.py
bot/filters/: is_sent.py
bot/keyboards/inline/: change_status_keyboard.py  group_keyboard.py  send_keyboard.py  status_keyboard.py  topic_keyboard.py  type_keyboard.py
bot/messages/: environment.py  errors.py  group.py
bot/middlewares/: album.py  sessionmaker.py
bot/models/: __init__.py  base.py  group.py  meetings.py  message.py  random_coffee.py  random_coffee_pair.py  topic.py  user.py  usergrouplink.py
bot/repositories/: base.py  group.py  message.py  random_coffee.py  random_coffee_pair.py  topic.py  uow.py  user.py
bot/routes/: __init__.py
bot/routes/group/: __init__.py  all_members.py  answer_message.py  clear.py  (+19 more)
bot/services/: message.py
bot/types/: __init__.py
bot/utils/: get_content.py
migrations/: env.py
migrations/versions/: 1d6ae52b4aeb_added_media_group.py  241cb3b310f3_implement_model_for_meets.py  39270bcf2897_added_responsible.py  447959c817db_change_delete_cascade_to_set_null.py  4b8227d2da51_added_tables_for_random_coffee.py  61466764c5c8_added_message_model.py  a9b9240e025e_added_message_type.py  aaed8b41c0b9_rename_text_to_html_text.py  cdb756595d35_added_cascade_delete.py  d62d1504838a_added_status.py  db76cf2180bf_added_topics.py  ea409d73e36e_init.py  fcf386700c7c_added_message_thread_id.py
(+20 files in other folders)
