[tool.poetry]
name = "sr-bot"
version = "0.1.0"
description = ""
authors = ["Kulunchick <nikolikrasovski@gmail.com>"]
readme = "README.md"
packages = [{include = "sr_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.16"
jinja2 = "^3.1.2"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
cachetools = "^5.3.1"
aiogram = {version = "^3.0.0b8", allow-prereleases = true}
pydantic-settings = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
